tests/instantiating/stream_conflict_return_param/stderr.golden
error: cannot instantiate 'p' functionality: all stream inner functionalities must be of the same base type and must be param or return, 'p' base type is 'param'
bus.fbd +2:3
   |
 2 |   my_stream stream
   |   ^^^^^^^^^
